# AutoMorph

./: pyproject.toml
M0_Preprocess/: EyeQ_process_main.py
M1_Retinal_Image_quality_EyePACS/: dataset.py  merge_quality_assess.py  test_outside.py
M2_Artery_vein/: test_outside.py
M2_Artery_vein/scripts/: dataset.py
M2_Vessel_seg/: dataset.py  test_outside_integrated.py
